--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "@material-ui/core": "^4.2.1",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.2.1",
+    "material-ui-image": "^3.2.0",
+    "mdbreact": "^4.18.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-google-charts": "^3.0.14",
+    "react-reveal": "^1.2.2",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "typeface-roboto": "0.0.75"
   },
